[gd_scene load_steps=9 format=3 uid="uid://dvvsbriqqrjik"]

[ext_resource type="Script" path="res://scripts/olho_voador.gd" id="1_1bmsv"]
[ext_resource type="Texture2D" uid="uid://crmpuu86c25o8" path="res://Assets/Monsters_Creatures_Fantasy/Flying eye/Flight.png" id="1_4841g"]
[ext_resource type="Texture2D" uid="uid://uvkhtyxm3aj5" path="res://Assets/Monsters_Creatures_Fantasy/Flying eye/Attack.png" id="3_f4e66"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08lkl"]
size = Vector2(14.1518, 10.1668)

[sub_resource type="Animation" id="Animation_8l0vo"]
resource_name = "Voo"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texturaOlho:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_4841g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texturaOlho:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texturaOlho:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_7jph5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texturaOlho:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_4841g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texturaOlho:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texturaOlho:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_frdfy"]
resource_name = "Ataque"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texturaOlho:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_f4e66")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texturaOlho:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texturaOlho:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sw15q"]
_data = {
"Ataque": SubResource("Animation_frdfy"),
"RESET": SubResource("Animation_7jph5"),
"Voo": SubResource("Animation_8l0vo")
}

[node name="olho_voador" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_1bmsv")

[node name="colisaoOlho" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 1.5)
scale = Vector2(2.89715, 3.04913)
shape = SubResource("RectangleShape2D_08lkl")

[node name="texturaOlho" type="Sprite2D" parent="."]
texture = ExtResource("1_4841g")
hframes = 8

[node name="animOlho" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sw15q")
}
autoplay = "Voo"
speed_scale = 1.3

[node name="wall_detector" type="RayCast2D" parent="."]
target_position = Vector2(23, 0)
collision_mask = 6
